# jmux

./: .claude-build  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  parity-audit.md
.github/workflows/: release.yml
cmux/: Cargo.toml
cmux-cli/: Cargo.toml
cmux-cli/src/: commands.rs  main.rs
cmux/shell-integration/: cmux-bash-integration.bash  cmux-zsh-integration.zsh
cmux/shell-integration/fish/vendor_conf.d/: cmux.fish
cmux/src/: ai.rs  app.rs  hibernate.rs  main.rs
cmux/src/model/: claude_state.rs  panel.rs  tab_manager.rs  workspace.rs
cmux/src/remote/: bootstrap.rs  relay.rs
cmux/src/session/: claude_resume.rs  snapshot.rs  store.rs
cmux/src/settings/: custom_commands.rs  mod.rs  shortcuts.rs
cmux/src/socket/: v1.rs
cmux/src/socket/browser/: mod.rs
cmux/src/socket/v2/: file.rs  mod.rs  pane.rs  sidebar.rs  surface.rs  system.rs  workspace.rs
cmux/src/ui/: command_palette.rs  diff_panel.rs  dock.rs  dock_editor.rs  file_explorer.rs  file_preview_panel.rs  mod.rs  notes_panel.rs  omnibar.rs  pane_overview.rs  project_panel.rs  quick_terminal.rs  settings.rs  sidebar.rs  split_view.rs  state_sprite.rs  task_manager.rs  terminal_panel.rs  welcome.rs
cmux/src/ui/browser_panel/: mod.rs  registry.rs
cmux/src/ui/quick_terminal/: imp.rs  portal.rs
cmux/src/ui/window/: event_handler.rs  mod.rs  shortcuts.rs  styling.rs
daemon/remote/: go.mod
daemon/remote/cmd/cmuxd-remote/: cli.go  cli_compat.go
daemon/remote/cmd/jmuxd-remote/: cli.go  cli_compat.go  cli_test.go  main.go  main_test.go
data/: com.jacobbriggs.jmux.desktop  com.jacobbriggs.jmux.metainfo.xml
data/icons/hicolor/: index.theme
docs/: CAPTURING.md  SCREENSHOTS.md  architecture-review.md  autocapture.sh  security.md
docs/capture-tools/: harness.sh  make-gifs.sh  make-panels.sh  make-streamdeck-mock.py  virtual-keyboard-unstable-v1.xml  vkbd.c  vptr.c  wlr-virtual-pointer-unstable-v1.xml
docs/diagrams/: event-data-flow.excalidraw  system-architecture.excalidraw  ui-component-tree.excalidraw
ghostty-gtk/: Cargo.toml
ghostty-gtk/src/: app.rs  callbacks.rs  surface.rs
ghostty-sys/: Cargo.toml
ghostty-sys/src/: lib.rs
jmux/: Cargo.toml  build.rs
jmux-cli/: Cargo.toml
jmux-cli/src/: agent_view.rs  commands.rs  config.rs  format.rs  main.rs  rpc.rs
jmux/assets/: README.md
jmux/icons/: index.theme
jmux/shell-integration/: .zshenv  jmux-bash-integration.bash  jmux-zsh-integration.zsh
jmux/shell-integration/fish/vendor_conf.d/: jmux.fish
jmux/src/: agent_monitor.rs  app.rs  browser_history.rs  browser_import.rs  browser_profiles.rs  ghostty_config.rs  main.rs  notifications.rs  port_scanner.rs
jmux/src/model/: mod.rs  panel.rs  workspace.rs  workspace_group.rs
jmux/src/remote/: bootstrap.rs  mod.rs  proxy.rs  relay.rs  rpc.rs  session.rs
jmux/src/session/: claude_resume.rs  mod.rs  snapshot.rs  store.rs
jmux/src/settings/: custom_commands.rs  mod.rs  shortcuts.rs
jmux/src/socket/: auth.rs  mod.rs  server.rs  v1.rs
jmux/src/socket/browser/: helpers.rs  interaction.rs  mod.rs  navigation.rs  queries.rs  tabs.rs
jmux/src/socket/v2/: file.rs  group.rs  helpers.rs  markdown.rs  mod.rs  notification.rs  pane.rs  sidebar.rs  surface.rs  system.rs  tab.rs  window.rs  workspace.rs
jmux/src/ui/: agent_monitor_panel.rs  all_surfaces_search.rs  command_palette.rs  diff_panel.rs  dock.rs  dock_editor.rs  file_explorer.rs  file_preview_panel.rs  history_panel.rs  markdown_panel.rs  mod.rs  notes_panel.rs  notifications_panel.rs  omnibar.rs  pane_overview.rs  quick_terminal.rs  search_overlay.rs  settings.rs  sidebar.rs  split_view.rs  state_sprite.rs  task_manager.rs  terminal_panel.rs  textbox.rs  vault_panel.rs  welcome.rs
jmux/src/ui/browser_panel/: actions.rs  mod.rs  registry.rs  theme.rs  util.rs
jmux/src/ui/quick_terminal/: imp.rs  portal.rs
jmux/src/ui/window/: dialogs.rs  event_handler.rs  mod.rs  shortcuts.rs  styling.rs
scripts/: install.sh
