[workspace]
members = [
    "ghostty-sys",
    "ghostty-gtk",
    "cmux",
    "cmux-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/douglas/cmux-gtk"

[workspace.dependencies]
# GTK4 / libadwaita
gtk4 = { version = "0.11", features = ["v4_6"] }
libadwaita = { version = "0.9", features = ["v1_5", "gtk_v4_6"] }
glib = "0.22"
gdk4 = { version = "0.11", features = ["v4_6"] }
gdk-pixbuf = "0.22"
gio = "0.22"
webkit6 = "0.6"
soup3 = "0.9"

# Async runtime
tokio = { version = "1", features = ["net", "sync", "time", "rt-multi-thread", "macros", "io-util", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Paths
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown
pulldown-cmark = "0.12"

# Syntax highlighting (pure-Rust regex backend, no native onig dependency)
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Crypto (HMAC-SHA256 for socket/relay auth)
hmac = "0.12"
sha2 = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
# Keep integer overflow checks in release builds — the hot path is in
# Zig-compiled ghostty, so the Rust overhead is negligible.
overflow-checks = true
