[package]
name = "cmux"
version = "0.62.0-alpha.16"
edition.workspace = true
description = "cmux terminal multiplexer for Linux (GTK4/libadwaita)"

[features]
default = ["webkit"]
link-ghostty = ["ghostty-gtk/link-ghostty"]
webkit = ["dep:webkit6", "dep:pulldown-cmark", "dep:soup3"]
# Quake-style drop-down quick terminal. Needs libgtk4-layer-shell at build/run
# time and a layer-shell compositor (KDE/wlroots). Off by default.
quick-terminal = ["dep:gtk4-layer-shell"]

[[bin]]
name = "cmux-app"
path = "src/main.rs"

[dependencies]
ghostty-gtk = { path = "../ghostty-gtk" }
ghostty-sys = { path = "../ghostty-sys" }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
glib = { workspace = true }
gdk4 = { workspace = true }
gio = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
base64 = "0.22"
webkit6 = { workspace = true, optional = true }
soup3 = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
syntect = { workspace = true }
shell-escape = "0.1.5"
hmac = { workspace = true }
sha2 = { workspace = true }
ureq = { version = "3", default-features = false, features = ["native-tls", "json"] }
gtk4-layer-shell = { version = "0.8", optional = true }
