[package]
name = "jmux-cli"
version = "0.62.0-alpha.16"
edition.workspace = true
description = "CLI client for jmux terminal multiplexer"

[[bin]]
name = "jmux-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
